--- a/sass/utils/variables.scss
+++ b/sass/utils/variables.scss
@@ -1,27 +1,27 @@
-$primary_color : #9356DC ;
-$secondary_color : #FF79DA ; 
-$third_color : #99E2D0 ; 
+$primary_color: #9356dc;
+$secondary_color: #ff79da;
+$third_color: #99e2d0;
 
-$primary_background : #ffffff ; 
-$secondary_background : #f6f6f6 ; 
+$primary_background: #ffffff;
+$secondary_background: #f6f6f6;
 
-$padding_none : 0 ; 
-$padding-m : 10px ; 
-$padding-l : $padding-m*2 ; 
-$padding-xl : $padding-l*2 ; 
+$padding_none: 0;
+$padding-m: 10px;
+$padding-l: $padding-m * 2;
+$padding-xl: $padding-l * 2;
 
-$margin_none : 0 ; 
-$margin-m : 10px ; 
-$margin-l : $margin-m*2 ; 
-$margin-xl : $margin-l*2 ; 
+$margin_none: 0;
+$margin-m: 10px;
+$margin-l: $margin-m * 2;
+$margin-xl: $margin-l * 2;
 
-$font-size1 : 25px ; 
-$font-size2 : 20px ; 
-$font-size3 : 18px ; 
-$font-size4 : 15px ; 
+$font-size1: 25px;
+$font-size2: 20px;
+$font-size3: 18px;
+$font-size4: 15px;
 
-$grey : #6e6b6b ; 
-$light_grey : #a09c9c ; 
-$very_light_grey : #EAEAEA ; 
-$dark_grey : #7d7d7d ;
-$very_dark_grey : #353535 ;
+$grey: #6e6b6b;
+$light_grey: #a09c9c;
+$very_light_grey: #eaeaea;
+$dark_grey: #7d7d7d;
+$very_dark_grey: #353535;
