--- a/sass/components/btn_commander.scss
+++ b/sass/components/btn_commander.scss
@@ -1,67 +1,67 @@
 .btn_commander {
-  color : #FFFFFF ; 
-  text-align : center ;
-    -webkit-background : linear-gradient(to right bottom, $secondary_color, $primary_color) ; 
-    -moz-background : linear-gradient(to right bottom, $secondary_color, $primary_color) ; 
-  background : linear-gradient(to right bottom, $secondary_color, $primary_color) ; 
-  font-size : $font-size3 ; 
-  font-weight : bold ; 
-  border-radius : 30px ; 
-  box-shadow : 3px 3px 3px $very_light_grey ; 
-  margin : 1% 26% 20% 26% ; 
-  padding : 15px 50px ; 
-  position : relative ; 
+  color: #ffffff;
+  text-align: center;
+  -webkit-background: linear-gradient(to right bottom, $secondary_color, $primary_color);
+  -moz-background: linear-gradient(to right bottom, $secondary_color, $primary_color);
+  background: linear-gradient(to right bottom, $secondary_color, $primary_color);
+  font-size: $font-size3;
+  font-weight: bold;
+  border-radius: 30px;
+  box-shadow: 3px 3px 3px $very_light_grey;
+  margin: 1% 26% 20% 26%;
+  padding: 15px 50px;
+  position: relative;
   @media (min-width: map-get($breakpoints, tablette)) {
-    margin : 1% 40% 10% 40% ; 
+    margin: 1% 40% 10% 40%;
   }
   @media screen and (min-width: map-get($breakpoints, desktop)) {
-    margin : 3% 45% ; 
+    margin: 3% 45%;
   }
-  transition : opacity 0.2s ease-out;
+  transition: opacity 0.2s ease-out;
 
   &:hover {
-    cursor : pointer ; 
+    cursor: pointer;
     &::before {
-      content: '';
+      content: "";
       position: absolute;
-      top: 0 ;
-      left: 0 ;
-      width : 100% ; 
-      height : 100% ;
-        -webkit-transform : scaleX(1) ; 
-        -moz-transform : scaleX(1) ;
-      transform : scaleX(1) ;
-        -webkit-transform-origin : top ; 
-        -moz-transform-origin : top ;
-      transform-origin : top ;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      -webkit-transform: scaleX(1);
+      -moz-transform: scaleX(1);
+      transform: scaleX(1);
+      -webkit-transform-origin: top;
+      -moz-transform-origin: top;
+      transform-origin: top;
     }
   }
 
   span {
-    position : relative ; 
-    z-index : 1 ; 
+    position: relative;
+    z-index: 1;
   }
 
   &::before {
-    content : "" ; 
-    position : absolute ;
-    top : 0 ; 
-    left : 0 ; 
-    width : 100% ; 
-    height : 100% ; 
-    border-radius : 30px ;   
-      background : -webkit-linear-gradient(to left bottom, lighten($secondary_color, 10%), lighten($primary_color, 10%));
-      background : -moz-linear-gradient(to left bottom, lighten($secondary_color, 10%), lighten($primary_color, 10%));
-    background : linear-gradient(to left bottom, lighten($secondary_color, 10%), lighten($primary_color, 10%));
-    box-shadow : 3px 3px 3px darken($very_light_grey, 35%) ; 
-      -webkit-transform : scaleX(0) ; 
-      -moz-transform : scaleX(0) ;
-    transform : scaleX(0) ;
-      -webkit-transform-origin : bottom ; 
-      -moz-transform-origin : bottom ;
-    transform-origin : bottom ;
-      -webkit-transition : transform, .2s ; 
-      -moz-transition : transform, .2s ; 
-    transition : transform .2s ; 
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 30px;
+    background: -webkit-linear-gradient(to left bottom, lighten($secondary_color, 10%), lighten($primary_color, 10%));
+    background: -moz-linear-gradient(to left bottom, lighten($secondary_color, 10%), lighten($primary_color, 10%));
+    background: linear-gradient(to left bottom, lighten($secondary_color, 10%), lighten($primary_color, 10%));
+    box-shadow: 3px 3px 3px darken($very_light_grey, 35%);
+    -webkit-transform: scaleX(0);
+    -moz-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transform-origin: bottom;
+    -moz-transform-origin: bottom;
+    transform-origin: bottom;
+    -webkit-transition: transform, 0.2s;
+    -moz-transition: transform, 0.2s;
+    transition: transform 0.2s;
   }
 }
