--- a/sass/layout/header.scss
+++ b/sass/layout/header.scss
@@ -1,95 +1,95 @@
 header {
-  display : flex ; 
-  flex-direction : column ; 
-  justify-content : space-around ;
-  align-items : center ; 
-  background-color : $primary_background ; 
-  
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background-color: $primary_background;
+
   .container {
-    width : 100% ;  
-    margin : $margin_none ; 
-    background-color : $primary_background ; 
+    width: 100%;
+    margin: $margin_none;
+    background-color: $primary_background;
     @media screen and (min-width: map-get($breakpoints, desktop)) {
-      width : 1394px ; 
-      margin-top : $margin-m ; 
+      width: 1394px;
+      margin-top: $margin-m;
     }
   }
-    
+
   .fa-arrow-left {
-    position : absolute ; 
-    color : #000000 ; 
-    font-size : $font-size2 ; 
-    margin : $margin-l ;
+    position: absolute;
+    color: #000000;
+    font-size: $font-size2;
+    margin: $margin-l;
   }
-  
+
   #logo_header {
-    width : 40% ; 
-    display : block ;
-    margin : 10px auto ; 
+    width: 40%;
+    display: block;
+    margin: 10px auto;
     @media screen and (min-width: map-get($breakpoints, desktop)) {
-      width : 30% ;
+      width: 30%;
     }
   }
-      
+
   #photo_header {
-    object-fit : cover ;
-    position : relative ; 
-    width : 100% ;
-    height : 250px ; 
-    margin : $margin_none ; 
-    z-index : 1 ;
+    object-fit: cover;
+    position: relative;
+    width: 100%;
+    height: 250px;
+    margin: $margin_none;
+    z-index: 1;
     @media screen and (min-width: map-get($breakpoints, desktop)) {
-      height : 300px ; 
+      height: 300px;
     }
   }
-    
+
   .restaurant_nom {
-    width : 100% ;
-    background-color : $secondary_background ; 
-    display : flex ; 
-    flex-direction : row ;
-    align-items : center ; 
-    border-radius : 30px 30px 0px 0px ; 
-    position : absolute ;
-    padding-top : $padding-l ; 
-    z-index : 2 ;
-    top : 250px ; 
+    width: 100%;
+    background-color: $secondary_background;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border-radius: 30px 30px 0px 0px;
+    position: absolute;
+    padding-top: $padding-l;
+    z-index: 2;
+    top: 250px;
     @media (min-width: map-get($breakpoints, tablette)) {
-      top : 260px ; 
+      top: 260px;
     }
     @media screen and (min-width: map-get($breakpoints, desktop)) {
-      background-color : $primary_background ; 
-      border-radius : 30px ; 
-      width : 40% ; 
-      top : 350px ; 
-      left : 570px ; 
+      background-color: $primary_background;
+      border-radius: 30px;
+      width: 40%;
+      top: 350px;
+      left: 570px;
     }
-  
+
     h1 {
-      width : 80% ;
-      padding-left : $padding-m ; 
-      font-family: 'Shrikhand', 'cursive' ;
-      font-size : 30px ; 
-      font-weight : bold ; 
-      text-align : left ;
-      margin-left : $margin-m ; 
+      width: 80%;
+      padding-left: $padding-m;
+      font-family: "Shrikhand", "cursive";
+      font-size: 30px;
+      font-weight: bold;
+      text-align: left;
+      margin-left: $margin-m;
       @media (min-width: map-get($breakpoints, tablette)) {
-        text-align: center ;
-        line-height: 20px ;
-        width : 70% ;
+        text-align: center;
+        line-height: 20px;
+        width: 70%;
       }
       @media screen and (min-width: map-get($breakpoints, desktop)) {
-        width : 80% ; 
-        text-align : left ; 
-        margin-left : $margin-l ; 
-        font-size : 30px ; 
+        width: 80%;
+        text-align: left;
+        margin-left: $margin-l;
+        font-size: 30px;
       }
     }
 
     .favori {
-      position : absolute ; 
-      top : 45px ; 
-      right : 40px ; 
+      position: absolute;
+      top: 45px;
+      right: 40px;
     }
   }
 }
