--- a/sass/pages/fonctionnement.scss
+++ b/sass/pages/fonctionnement.scss
@@ -1,102 +1,106 @@
 #fonctionnement {
-  @include flex-center-column ;
-  width : 100% ; 
-  background-color : $primary_background ;
-  align-items : flex-start ; 
-  margin : 30px 0px ; 
+  @include flex-center-column;
+  width: 100%;
+  background-color: $primary_background;
+  align-items: flex-start;
+  margin: 30px 0px;
   @media (min-width: map-get($breakpoints, tablette)) {
-    margin : $margin_none $margin_none $margin-l ; 
+    margin: $margin_none $margin_none $margin-l;
   }
   @media screen and (min-width: map-get($breakpoints, desktop)) {
-    align-items : center ; 
-    margin : $margin-m ;
+    align-items: center;
+    margin: $margin-m;
   }
-    
+
   h2 {
-    font-size : $font-size1 ; 
-    font-weight : bold ; 
-    margin : $margin-l ; 
+    font-size: $font-size1;
+    font-weight: bold;
+    margin: $margin-l;
     @media screen and (min-width: map-get($breakpoints, desktop)) {
-      margin : $margin-m ; 
+      margin: $margin-m;
     }
   }
-  
+
   .fonctionnement {
-    @include flex-center-column ; 
-    width : 90% ; 
-    margin : 0 auto ; 
+    @include flex-center-column;
+    width: 90%;
+    margin: 0 auto;
     @media screen and (min-width: map-get($breakpoints, desktop)) {
-      @include flex-center-row ;
-      width : 100% ; 
+      @include flex-center-row;
+      width: 100%;
     }
-  } 
-    
-  .categorie { 
-    position : relative ; 
-    @include flex-center-row ; 
-    align-items : center ; 
-    width : 100% ; 
+  }
+
+  .categorie {
+    position: relative;
+    @include flex-center-row;
+    align-items: center;
+    width: 100%;
     @media screen and (min-width: map-get($breakpoints, desktop)) {
-      width : 35% ;
+      width: 35%;
     }
-  
+
     .nombre {
       background-color: $primary_color;
-      color : #FFFFFF ; 
+      color: #ffffff;
       clip-path: circle(40%);
-      padding : 15px ; 
-      position : absolute ; 
-      z-index : 1 ;
-      left : 25px ; 
+      padding: 15px;
+      position: absolute;
+      z-index: 1;
+      left: 25px;
       @media (min-width: map-get($breakpoints, tablette)) {
-        left : 120px ; 
+        left: 120px;
       }
       @media screen and (min-width: map-get($breakpoints, desktop)) {
-        left : 75px ;  
+        left: 75px;
       }
     }
-  
+
     .fonctionnement_description {
-      position : relative ;
-      font-size : 16px ; 
-      font-weight : bold ; 
-      background-color : $secondary_background ; 
-      display : flex ;
-      flex-direction: row ;
-      justify-content : flex-start ; 
+      position: relative;
+      font-size: 16px;
+      font-weight: bold;
+      background-color: $secondary_background;
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
       box-shadow: 2px 3px 7px $very_light_grey;
-      border-radius : 25px ;
-      width : 80% ;
-      margin : $margin-m ;  
-      padding : 30px 0px 30px 90px ;  
-      z-index : 0 ;  
+      border-radius: 25px;
+      width: 80%;
+      margin: $margin-m;
+      padding: 30px 0px 30px 90px;
+      z-index: 0;
       @media (min-width: map-get($breakpoints, tablette)) {
-        width : 60% ;
-        margin : $margin-m $margin-l ; 
+        width: 60%;
+        margin: $margin-m $margin-l;
       }
       @media screen and (min-width: map-get($breakpoints, desktop)) {
-        padding : 20px 0px 20px 80px ;
+        padding: 20px 0px 20px 80px;
       }
       &:hover {
-        cursor : pointer ;
-        background-color: lighten($primary-color, 35%) ;
-        color : #000000 ; 
-        .fa-mobile-alt, .fa-list-ul, .fa-store {
-          color : darken($primary-color, 15%) ; 
+        cursor: pointer;
+        background-color: lighten($primary-color, 35%);
+        color: #000000;
+        .fa-mobile-alt,
+        .fa-list-ul,
+        .fa-store {
+          color: darken($primary-color, 15%);
         }
       }
-      .fa-mobile-alt, .fa-list-ul, .fa-store {
-        position : absolute ;
-        z-index : 1 ; 
-        font-size : $font-size2 ; 
-        left : 45px ; 
-        top : 25px ; 
-        color : $dark_grey ;  
+      .fa-mobile-alt,
+      .fa-list-ul,
+      .fa-store {
+        position: absolute;
+        z-index: 1;
+        font-size: $font-size2;
+        left: 45px;
+        top: 25px;
+        color: $dark_grey;
         @media screen and (min-width: map-get($breakpoints, desktop)) {
-          left : 35px ; 
-          top : 16px ; 
+          left: 35px;
+          top: 16px;
         }
       }
-    }  
+    }
   }
 }
