--- a/sass/pages/main_restaurants.scss
+++ b/sass/pages/main_restaurants.scss
@@ -1,110 +1,110 @@
 #restaurants {
-  @include flex-center-column ;
-  background-color : $secondary_background;
-  align-items : flex-start ;  
-  padding : 50px 25px ;   
+  @include flex-center-column;
+  background-color: $secondary_background;
+  align-items: flex-start;
+  padding: 50px 25px;
   @media screen and (min-width: map-get($breakpoints, desktop)) {
-    align-items : center ; 
-    border-radius : 20px ;
-    margin-bottom : 15px ; 
+    align-items: center;
+    border-radius: 20px;
+    margin-bottom: 15px;
   }
-    
-  h2 { 
-    font-size : $font-size1 ; 
-    font-weight : bold ; 
-    margin-bottom : 20px ; 
+
+  h2 {
+    font-size: $font-size1;
+    font-weight: bold;
+    margin-bottom: 20px;
   }
 
   .liste_restaurants {
-    @include flex-center-column ;
-    margin : auto ; 
-    width : 100% ; 
+    @include flex-center-column;
+    margin: auto;
+    width: 100%;
     @media (min-width: map-get($breakpoints, tablette)) {
-      flex-direction : row ; 
-      justify-content : space-around ; 
-      flex-wrap : wrap ;
-      padding : 10px 0px ; 
+      flex-direction: row;
+      justify-content: space-around;
+      flex-wrap: wrap;
+      padding: 10px 0px;
     }
     @media screen and (min-width: map-get($breakpoints, desktop)) {
-      flex-wrap : nowrap ;
+      flex-wrap: nowrap;
     }
 
     .restaurant {
-      position : relative ; 
-      background-color : $primary_background ;
-      display : flex ;
-      flex-wrap : nowrap ; 
-      flex-direction : column ; 
-      border-radius : 20px ;
-      margin : 10px auto ;
-      width : 100% ; 
-      height : 270px ;
-      box-shadow : 2px 2px 3px $very_light_grey ;
+      position: relative;
+      background-color: $primary_background;
+      display: flex;
+      flex-wrap: nowrap;
+      flex-direction: column;
+      border-radius: 20px;
+      margin: 10px auto;
+      width: 100%;
+      height: 270px;
+      box-shadow: 2px 2px 3px $very_light_grey;
       @media (min-width: map-get($breakpoints, tablette)) {
-        margin : 10px auto ;
-        width : 45%
+        margin: 10px auto;
+        width: 45%;
       }
       @media screen and (min-width: map-get($breakpoints, desktop)) {
-        margin : $margin-m ; 
-        width : 30% ; 
+        margin: $margin-m;
+        width: 30%;
       }
       &:hover {
-        box-shadow : 2px 2px 3px darken($very_light_grey, 30%) ;
-        border-radius : 20px ; 
-        padding-bottom : $padding-m ; 
-      }   
-      
+        box-shadow: 2px 2px 3px darken($very_light_grey, 30%);
+        border-radius: 20px;
+        padding-bottom: $padding-m;
+      }
+
       a {
-        text-decoration : none ;
+        text-decoration: none;
       }
-     
-      .restaurant_photo {  
-        object-fit: cover ;
-        width : 100% ;
-        height : 200px;    
-        border-radius : 20px 20px 0px 0px;
-        position : relative ; 
-        z-index : 0 ;
+
+      .restaurant_photo {
+        object-fit: cover;
+        width: 100%;
+        height: 200px;
+        border-radius: 20px 20px 0px 0px;
+        position: relative;
+        z-index: 0;
       }
-     
- 
+
       .nouveau {
-        color : darken($third_color, 40%) ;
-        background-color : $third_color ; 
-        font-weight : bold ; 
-        text-align : center ; 
-        position : absolute ; 
-        padding : 10px ; 
-        z-index : 1 ;
-        right : 15px ;
-        top : 15px ; 
+        color: darken($third_color, 40%);
+        background-color: $third_color;
+        font-weight: bold;
+        text-align: center;
+        position: absolute;
+        padding: 10px;
+        z-index: 1;
+        right: 15px;
+        top: 15px;
       }
-             
+
       .description {
-        display : flex ;
-        flex-direction : row ;
-        justify-content : space-between ; 
-        align-items : center ; 
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
 
         .informations {
-          display : flex ; 
-          flex-direction : column ; 
-          flex-wrap : nowrap ; 
-          margin : $margin-m ; 
-          width : 80% ; 
-              
-          h3, .lieu {
-            font-size : $font-size2 ; 
-            margin : 5px 5px 10px 5px ;
-            font-family : 'Roboto', sans-serif ; 
-            color : #000000 ; 
+          display: flex;
+          flex-direction: column;
+          flex-wrap: nowrap;
+          margin: $margin-m;
+          width: 80%;
+
+          h3,
+          .lieu {
+            font-size: $font-size2;
+            margin: 5px 5px 10px 5px;
+            font-family: "Roboto", sans-serif;
+            color: #000000;
           }
-            
+
           h3 {
-            font-weight : bold ; 
+            font-weight: bold;
           }
         }
       }
     }
-  }  
+  }
 }
