modification margin pour animation_check_circle

--- a/sass/themes/animation_check_circle.scss
+++ b/sass/themes/animation_check_circle.scss
@@ -2,6 +2,12 @@
 .plats,
 .desserts {
   overflow: hidden;
+  &:hover {
+    padding-left: 2.5px;
+    @media screen and (min-width: map-get($breakpoints, desktop)) {
+      padding-left: $padding_none;
+    }
+  }
   .check-circle {
     margin-right: -30px;
     margin-left: 10px;
