--- a/sass/layout/header.scss
+++ b/sass/layout/header.scss
@@ -26,7 +26,7 @@ header {
     width: 40%;
     display: block;
     margin: 10px auto;
-    @media screen and (min-width: map-get($breakpoints, desktop)) {
+    @media screen and (min-width: 1000px) {
       width: 30%;
     }
   }
@@ -54,7 +54,7 @@ header {
     padding-top: $padding-l;
     z-index: 2;
     top: 250px;
-    @media (min-width: map-get($breakpoints, tablette)) {
+    @media (min-width: map-get($breakpoints, tablette)) and (max-width: map-get($breakpoints, desktop)) {
       top: 260px;
     }
     @media screen and (min-width: map-get($breakpoints, desktop)) {
@@ -73,7 +73,7 @@ header {
       font-weight: bold;
       text-align: left;
       margin-left: $margin-m;
-      @media (min-width: map-get($breakpoints, tablette)) {
+      @media (min-width: map-get($breakpoints, tablette)) and (max-width: map-get($breakpoints, desktop)) {
         text-align: center;
         line-height: 20px;
         width: 70%;
