--- a/sass/pages/main_restaurants.scss
+++ b/sass/pages/main_restaurants.scss
@@ -19,7 +19,7 @@
     @include flex-center-column;
     margin: auto;
     width: 100%;
-    @media (min-width: map-get($breakpoints, tablette)) {
+    @media (min-width: map-get($breakpoints, tablette)) and (max-width: map-get($breakpoints, desktop)) {
       flex-direction: row;
       justify-content: space-around;
       flex-wrap: wrap;
@@ -40,7 +40,7 @@
       width: 100%;
       height: 270px;
       box-shadow: 2px 2px 3px $very_light_grey;
-      @media (min-width: map-get($breakpoints, tablette)) {
+      @media (min-width: map-get($breakpoints, tablette)) and (max-width: map-get($breakpoints, desktop)) {
         margin: 10px auto;
         width: 45%;
       }
